--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/zinc-faint.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta property="og:title" content="Camping site" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jineshb.me" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dhuk11prd/image/upload/c_pad,w_800/v1728814903/og-image_ivbny7.png"
+    />
+    <meta
+      property="og:description"
+      content="Explore a stylized forest camping scene"
+    />
+    <title>Camping site</title>
   </head>
   <body>
     <div id="root"></div>
